13.7 Fix the filter it breaks if there are no manga at all or manga in 1 row. + 13.8 Fix that it is possible to choose the type, grid or tile + 13.9 Make a message that nothing found. + 13.10 Filtri catalog manga. +      1) Behind genre +      2) Status +      3) By year of release +      4) By age rating +      5) By author +

--- a/src/main/resources/static/css/manga-main.css
+++ b/src/main/resources/static/css/manga-main.css
@@ -9,6 +9,7 @@ body {
 .container {
     display: flex;
     max-width: 1200px;
+    min-height:700px;
     margin: 0 auto;
     padding: 20px;
     margin-left: 55px;
@@ -23,6 +24,8 @@ body {
     border-right: 2px dotted #333;
     border-left: 2px dotted #333;
     background-color: #171717;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .main-content {
@@ -793,4 +796,12 @@ input::placeholder {
 }
 .rating-number{
     margin-left: 5px;
+}
+#no-manga-message {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    left: 45%;
+    z-index: 10;
 }
